; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_check_file_directory_conflict.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_check_file_directory_conflict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }
%struct.cache_entry = type { i32 }

@CE_REMOVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.index_state*, %struct.cache_entry*, i32, i32)* @check_file_directory_conflict to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_file_directory_conflict(%struct.index_state* %0, %struct.cache_entry* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.index_state*, align 8
  %7 = alloca %struct.cache_entry*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.index_state* %0, %struct.index_state** %6, align 8
  store %struct.cache_entry* %1, %struct.cache_entry** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load %struct.cache_entry*, %struct.cache_entry** %7, align 8
  %12 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @CE_REMOVE, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %31

18:                                               ; preds = %4
  %19 = load %struct.index_state*, %struct.index_state** %6, align 8
  %20 = load %struct.cache_entry*, %struct.cache_entry** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @has_file_name(%struct.index_state* %19, %struct.cache_entry* %20, i32 %21, i32 %22)
  store i32 %23, i32* %10, align 4
  %24 = load i32, i32* %10, align 4
  %25 = load %struct.index_state*, %struct.index_state** %6, align 8
  %26 = load %struct.cache_entry*, %struct.cache_entry** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @has_dir_name(%struct.index_state* %25, %struct.cache_entry* %26, i32 %27, i32 %28)
  %30 = add nsw i32 %24, %29
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %18, %17
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @has_file_name(%struct.index_state*, %struct.cache_entry*, i32, i32) #1

declare dso_local i32 @has_dir_name(%struct.index_state*, %struct.cache_entry*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
